# weathrs

./: Cargo.toml  install.sh  license.md  readme.md
src/: config.rs  converter.rs  main.rs  parser.rs
