[package]
name = "weathrs"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
reqwest = "0.11.24"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0.79"
dirs = "3.0.2"
structopt = "0.3.26"
